# weather

./: Dockerfile  README.MD  README.md  docker-compose.yml  requirements.txt
.github/workflows/: ci.yml
weather_project/: .cache.sqlite  .env.sample  .gitignore  Dockerfile.gunicorn  README.MD  db.sqlite3  docker-compose.yml  gunicorn.conf.py  init.sh  manage.py  nginx.conf  pyproject.toml  pytest.ini  requirements.txt
weather_project/weather/: admin.py  forms.py  models.py  redis_helper.py  serializers.py  services.py  tests.py  urls.py  views.py
weather_project/weather/api/: permissions.py  serializers.py  tests.py  urls.py  views.py
weather_project/weather/migrations/: 0001_initial.py  0001_squashed_0004_remove_citysearchhistory_search_count.py  0002_citysearchhistory_last_searched_and_more.py  0003_citysearchhistory_temperature.py  0004_remove_citysearchhistory_search_count.py
weather_project/weather/static/css/: styles.css
weather_project/weather/static/js/: scripts.js
weather_project/weather/templates/: base.html  city_search_count.html  error.html  search_history.html  weather.html
weather_project/weather/tests/: test_weather_api.py  test_weather_services.py  test_weather_views.py
weather_project/weather_project/: settings.py  urls.py
