[tool.poetry]
name = "weather-project"
version = "0.2.0"
description = "a site where the user enters the name of a city and receives a weather forecast for that city for the near future"
authors = ["Petr <bang1987@mail.ru>"]
readme = "README.md"
repository = "https://github.com/LipkiyPetrucho/weather/"

[tool.poetry.dependencies]
python = "^3.12"
Django = "5.0.7"
djangorestframework = "3.15.2"
djangorestframework-simplejwt = "5.3.1"
django-redis = "5.4.0"
dadata = "21.10.1"
gunicorn = "^20.0.4"
numpy = "2.0.1"
pandas = "2.2.2"
openmeteo-py = "0.0.1"
openmeteo_requests = "1.2.1"
openmeteo_sdk = "1.11.11"
requests = "2.32.3"
requests-cache = "1.2.1"
retry-requests = "2.0.0"
pytz = "2024.1"
certifi = "2024.7.4"
attrs = "23.2.0"
async-timeout = "4.0.3"
charset-normalizer = "3.3.2"
flatbuffers = "24.3.25"
fontawesome = "5.10.1.post1"
h11 = "0.14.0"
httpx = "0.27.0"
httpcore = "1.0.5"
idna = "3.7"
sqlparse = "0.5.1"
six = "1.16.0"
sniffio = "1.3.1"
urllib3 = "2.2.2"
tzdata = "2024.1"
url-normalize = "1.4.3"
wrapt = "1.16.0"
packaging = "24.1"

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"
pytest = "*"
pytest-django = "*"
pytest-mock ="*"
python-dotenv = "*"
poetry = "*"
psycopg2-binary = "2.9.9"
PyJWT = "2.8.0"
requests-mock = "*"